lume/Lume_3D/test/unittest/assets/test_data/gltf/Invalid/Duck_GLTFv1.gltf
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:565c4c7079755a9c3c611c0d8cf700234ecd70211e1d512b8e345ff4f8c849ab
size 191136
